--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <button class="btn secondary" onclick="logout()">Log out</button>
       </div>
 
-      <h2>Welcome, <span id="welcomeName">Christy Earley</span></h2>
+      <h2>Welcome, <span id="welcomeName">'Christy Earley'</span></h2>
 
       <div class="two-columns">
         <!-- Balances -->
