--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <div>
           <div class="section-title">Account information</div>
           <div class="info-box">
-            <strong>Name:</strong> Christy EARLY<br />
+            <strong>Name:</strong> Christy Earley<br />
             <strong>Email:</strong> <span id="email">christyearley588@gmail.com</span><br />
             <strong>Phone:</strong> <span id="phone">571-299 3743</span><br />
             <strong>Address:</strong><br />
